Adding exception handling

--- a/src/UptimeRobotClient/todo.txt
+++ b/src/UptimeRobotClient/todo.txt
@@ -1,9 +1,9 @@
 ﻿[X] NewMonitor
 [X] DeleteMonitor
-- UpdateMonitor
+[X] UpdateMonitor
 
 
-- Adding exception handling
+[X] Adding exception handling
 
 - Adding docs
 
